--- a/package.json
+++ b/package.json
@@ -4,20 +4,11 @@
   "description": "A Develop Tool to Test WebSocket, Socket.IO, Stomp, HTTP, TCP, UDP API.",
   "main": "index.js",
   "scripts": {
-    "bundle-vendor-css": "cleancss ./node_modules/bootstrap/dist/css/bootstrap.min.css ./node_modules/github-fork-ribbon-css/gh-fork-ribbon.css -o vendor.bundle.css",
-    "bundle-index-css": "cleancss index.css -o index.bundle.css",
-    "clean-rev": "rimraf vendor.bundle-*.js vendor.bundle-*.css index.bundle-*.js index.bundle-*.css",
-    "rev": "npm run clean-rev && rev-static",
-    "build": "npm run bundle-vendor-css && npm run bundle-index-css && npm run file2variable && tsc && webpack && npm run rev && npm run sw-precache",
-    "lint": "tslint \"*.ts\" \"tests/*.ts\" && npm run standard",
-    "file2variable": "file2variable-cli app.template.html -o variables.ts --html-minify",
-    "tsc": "tsc",
-    "sw-precache": "sw-precache --config sw-precache.config.js && npm run uglifyjs",
-    "uglifyjs": "uglifyjs service-worker.js -o service-worker.bundle.js",
-    "standard": "standard \"**/*.config.js\"",
-    "fix": "standard --fix \"**/*.config.js\"",
-    "test": "tsc -p spec && karma start spec/karma.config.js",
-    "release": "clean-release"
+    "build": "clean-scripts build",
+    "lint": " clean-scripts lint",
+    "test": "clean-scripts test",
+    "fix": "clean-scripts fix",
+    "release": "clean-scripts release"
   },
   "repository": {
     "type": "git",
@@ -30,7 +21,7 @@
   },
   "homepage": "https://github.com/plantain-00/ws-tool#readme",
   "dependencies": {
-    "compression": "1.6.2",
+    "compression": "1.7.0",
     "express": "4.15.3",
     "node-fetch": "1.7.1",
     "tslib": "1.7.1",
@@ -41,36 +32,37 @@
     "@types/compression": "0.0.33",
     "@types/express": "4.0.36",
     "@types/jasmine": "2.5.53",
-    "@types/node": "8.0.7",
+    "@types/node": "8.0.17",
     "@types/node-fetch": "1.6.7",
     "@types/socket.io-parser": "0.0.2",
     "@types/uws": "0.13.0",
     "bootstrap": "3.3.7",
     "clean-css-cli": "4.1.6",
-    "clean-release": "1.1.1",
+    "clean-release": "1.3.2",
+    "clean-scripts": "1.0.1",
     "clipboard": "1.7.1",
-    "date-fns": "2.0.0-alpha.1",
-    "ejs": "2.5.6",
-    "file2variable-cli": "1.3.0",
+    "date-fns": "1.28.5",
+    "ejs": "2.5.7",
+    "file2variable-cli": "1.4.1",
     "github-fork-ribbon-css": "0.2.1",
-    "jasmine": "2.6.0",
+    "jasmine": "2.7.0",
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-firefox-launcher": "1.0.1",
     "karma-jasmine": "1.1.0",
-    "karma-webpack": "2.0.3",
+    "karma-webpack": "2.0.4",
     "protobufjs": "6.8.0",
-    "rev-static": "3.2.1",
+    "rev-static": "3.2.2",
     "rimraf": "2.6.1",
     "socket.io-parser": "3.1.2",
     "standard": "10.0.2",
     "sw-precache": "5.2.0",
-    "tslint": "5.4.3",
-    "typescript": "2.4.1",
-    "uglify-js": "3.0.22",
-    "vue": "2.3.4",
+    "tslint": "5.5.0",
+    "typescript": "2.4.2",
+    "uglify-js": "3.0.27",
+    "vue": "2.4.2",
     "vue-class-component": "5.0.2",
-    "webpack": "3.0.0",
-    "webrtc-adapter": "4.1.0"
+    "webpack": "3.4.1",
+    "webrtc-adapter": "4.2.1"
   }
 }
